# douyin-pet-monitor

./: .gitignore  README.md  requirements.txt
.cargo/: config.toml
.github/workflows/: package-desktop.yml
app/: __init__.py  cli.py  config.py  db.py  exporter.py  filtering.py  importer.py  scoring.py
data/: sample_creators.csv
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: check-no-startup-backend.mjs  check-table-utils.mjs
desktop/src/: App.vue  style.css  tableUtils.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: CreatorTable.vue
desktop/src/composables/: useCreators.ts
docs/: 达多多_达人库搜索结果 (1).xlsx
docs/superpowers/plans/: 2026-05-20-dadaduo-excel-enhancement.md  2026-05-20-tauri-native-desktop.md
scripts/: browser_check.py  build_backend.py  check_package_workflow.py  generate_logo_assets.py
tests/: test_cli.py  test_importer.py
